# craft_launcher_rust

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/craft_launcher/: mod.rs
src/craft_launcher/core/: disposable.rs  engine.rs  json_structs.rs  mod.rs
src/craft_launcher/core/assets/: assets_parser.rs  mod.rs
src/craft_launcher/core/manifest/: mod.rs  version_manifest_parser.rs
src/craft_launcher/core/version/: base_version.rs  library_parser.rs  library_struct.rs  mod.rs  version_handler.rs  version_parser.rs
src/craft_launcher/core/version/legacy/: legacy_fabric.rs  legacy_forge.rs  legacy_vanilla.rs  mod.rs
src/craft_launcher/core/version/modern/: mod.rs  modern_fabric.rs  modern_forge.rs  modern_neoforge.rs  modern_vanilla.rs
src/craft_launcher/java/: arguments_builder.rs  arguments_merger.rs  library_extractor.rs  mod.rs
src/craft_launcher/utils/: directory_operations.rs  file_operations.rs  mod.rs  networking.rs  path_operations.rs  string_utils.rs
tests/: arguments_test.rs  asset_download_test.rs  integration_test.rs  library_extractor_test.rs  library_jar_file_download_test.rs  modded_asset_download_test.rs
