[package]
name = "craft_launcher_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
directories = "6.0.0"
fs = "0.0.5"
libc = "0.2.172"
rand = "0.9.1"
reqwest = { version = "0.12.15", features = ["blocking"] }
serde = "1.0.219"
serde_json = "1.0.140"
yaque = "0.6.6"

[lib]
name = "craft_launcher_rust"
crate-type = ["cdylib"]
