[package]
name = "craft_launcher_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
directories = "6.0.0"
fs = "0.0.5"
libc = "0.2.172"
rand = "0.9.1"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
yaque = "0.6.6"
zip = "4.0.0"

[lib]
name = "craft_launcher_rust"
crate-type = ["cdylib", "rlib"]
